wDesktop 0.2.1

* Fix French translation for "Refresh".