@@ -7,7 +7,7 @@ include(RelativePath)
 project(wDesktop)
 set(WDESKTOP_VERSION_MAJOR 0)
 set(WDESKTOP_VERSION_MINOR 2)
-set(WDESKTOP_VERSION_PATCH 0)
+set(WDESKTOP_VERSION_PATCH 1)
 set(WDESKTOP_VERSION ${WDESKTOP_VERSION_MAJOR}.${WDESKTOP_VERSION_MINOR}.${WDESKTOP_VERSION_PATCH})
 configure_file(${CMAKE_SOURCE_DIR}/cmake/config.h.in ${CMAKE_BINARY_DIR}/src/config.h)
 
