@@ -1,3 +1,4 @@
 wDesktop 0.2.1
+ * Fix French translation for "Refresh".
+ * Make it possible to keep wDesktop in the dock on OS X.
 
-* Fix French translation for "Refresh".
